--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@react-input/mask": "^2.0.4",
     "@tailwindcss/vite": "^4.1.16",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
