разделил бэкэнд на файлы; убрал выделение логотипа и сделал его не draggable в футере

--- a/backend/example.env
+++ b/backend/example.env
@@ -1,5 +1,14 @@
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=465
-SMTP_USER=
-SMTP_PASSWORD=
-ADMIN_EMAIL=
+FRONTEND_URL=
+BACKEND_URL=
+
+SMTP__HOST=smtp.gmail.com
+SMTP__PORT=465
+SMTP__USER=
+SMTP__PASSWORD=
+SMTP__ADMIN=
+
+DB__URL=sqlite:///./subscribers.db
+
+JWT__SECRET_KEY=CHANGE_ME_SUPER_SECRET
+JWT__ALGORITHM=HS256
+JWT__ACCESS_TOKEN_EXPIRE_DAYS=14
