--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.5",
+    "react-router-hash-link": "^2.4.3",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
