перенесли данные туров из json в базу данных; обновили вид сайта

--- a/backend/example.env
+++ b/backend/example.env
@@ -7,7 +7,7 @@ SMTP__USER=
 SMTP__PASSWORD=
 SMTP__ADMIN=
 
-DB__URL=sqlite:///./subscribers.db
+DB__URL=sqlite:///./example.db
 
 JWT__SECRET_KEY=CHANGE_ME_SUPER_SECRET
 JWT__ALGORITHM=HS256
